# ctms-idor

./: .env.example  .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: action_items.py  auth.py  dashboard.py  studies.py
backend/app/config/: __init__.py  database.py  settings.py
backend/app/models/: __init__.py  action_item.py  sla_rule.py  study.py  user.py
backend/app/repositories/: __init__.py  action_item_repository.py  base.py
backend/app/schemas/: __init__.py  action_item.py  study.py  user.py
backend/app/services/: __init__.py  auth_service.py  sla_engine.py
database/migrations/: 001_enums.sql  002_users.sql  003_studies.sql  004_study_team.sql  005_action_items.sql  006_action_item_updates.sql  007_sla_rules.sql  008_monitor_letters.sql  009_regulatory_events.sql  010_safety_cases.sql  011_agent_runs.sql  run_all.sh
docs/: IMPLEMENTATION_PLAN.md
frontend/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/action-items/: page.tsx
frontend/src/app/(dashboard)/settings/: page.tsx
frontend/src/app/(dashboard)/studies/: page.tsx
frontend/src/app/(dashboard)/studies/[id]/: page.tsx
frontend/src/components/action-items/: action-item-card.tsx  action-item-dialog.tsx  filters-sidebar.tsx  kanban-board.tsx  kanban-column.tsx
frontend/src/components/dashboard/: kpi-card.tsx  stats-cards.tsx
frontend/src/components/layout/: header.tsx  sidebar.tsx
frontend/src/components/studies/: study-dialog.tsx
frontend/src/components/ui/: badge.tsx  progress.tsx
frontend/src/lib/: api-client.ts  utils.ts
frontend/src/stores/: action-items-store.ts  auth-store.ts
frontend/src/types/: index.ts
scripts/: run-migrations.sh  setup-postgres.sh
